@@ -2,7 +2,8 @@ package itz.lirdev;
 
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
+import java.util.concurrent.atomic.AtomicBoolean;
 
 import org.bukkit.Bukkit;
 import org.bukkit.entity.Player;
@@ -18,68 +19,91 @@ import com.google.gson.JsonParser;
 import itz.lirdev.configuration.Config;
 import itz.lirdev.tools.ColorParser;
 import itz.lirdev.tools.Logger;
+import itz.lirdev.tools.SchedulerUtil;
 
 public class UpdateChecker implements Listener {
 
-    private final Config config;
     private final JavaPlugin plugin;
     private final String currentVersion;
     private final String projectId;
-    private final boolean checkUpdates;
-    private final JsonParser jsonParser = new JsonParser();
-    private String newVersion = "";
+    private final boolean enabled;
+
+    private volatile String latestVersion = null;
+    private final AtomicBoolean updateAvailable = new AtomicBoolean(false);
+    private final AtomicBoolean checked = new AtomicBoolean(false);
 
     public UpdateChecker(JavaPlugin plugin, String currentVersion, String projectId, Config config) {
         this.plugin = plugin;
         this.currentVersion = currentVersion;
         this.projectId = projectId;
-        this.config = config;
-        this.checkUpdates = config.isCheckUpdate();
+        this.enabled = config.isCheckUpdate();
+    }
 
-        if (this.checkUpdates) {
-            Bukkit.getPluginManager().registerEvents(this, plugin);
-            Bukkit.getScheduler().runTaskLaterAsynchronously(plugin, this::checkForUpdates, 20L);
+    public void start() {
+        if (!enabled) {
+            return;
         }
+        Bukkit.getPluginManager().registerEvents(this, plugin);
+        SchedulerUtil.runAsync(plugin, this::checkForUpdates, 40L);
     }
 
     public void checkForUpdates() {
-        if (!checkUpdates) {
+        if (!enabled || checked.get()) {
             return;
         }
 
+        HttpURLConnection connection = null;
         try {
             String apiUrl = "https://api.modrinth.com/v2/project/" + projectId + "/version";
-            HttpURLConnection connection = (HttpURLConnection) new URL(apiUrl).openConnection();
+            connection = (HttpURLConnection) URI.create(apiUrl).toURL().openConnection();
             connection.setRequestMethod("GET");
             connection.setRequestProperty("User-Agent", plugin.getName() + "/" + currentVersion);
             connection.setConnectTimeout(5000);
             connection.setReadTimeout(5000);
 
-            if (connection.getResponseCode() == 200) {
-                try (InputStreamReader reader = new InputStreamReader(connection.getInputStream())) {
-                    JsonElement element = jsonParser.parse(reader);
-                    if (element.isJsonArray()) {
-                        JsonArray versions = element.getAsJsonArray();
-                        if (versions.size() > 0) {
-                            newVersion = versions.get(0).getAsJsonObject()
-                                    .get("version_number").getAsString();
+            if (connection.getResponseCode() != 200) {
+                return;
+            }
 
-                            if (!newVersion.equals(currentVersion)) {
-                                Bukkit.getScheduler().runTask(plugin, this::notifyUpdate);
-                            }
-                        }
-                    }
+            try (InputStreamReader reader = new InputStreamReader(connection.getInputStream())) {
+                JsonElement element = new JsonParser().parse(reader);
+                if (!element.isJsonArray()) {
+                    return;
+                }
+
+                JsonArray versions = element.getAsJsonArray();
+                if (versions.size() == 0) {
+                    return;
+                }
+
+                latestVersion = versions.get(0)
+                        .getAsJsonObject()
+                        .get("version_number")
+                        .getAsString();
+
+                if (isNewerVersion(currentVersion, latestVersion)) {
+                    updateAvailable.set(true);
+                    SchedulerUtil.runTaskLater(plugin, this::notifyConsoleAndOnline, 1L);
                 }
             }
+
+            checked.set(true);
+
         } catch (Exception e) {
-            Logger.error("&#FF5555Update check failed: " + e.getMessage());
+            Logger.error("Update check failed: " + e.getMessage());
+        } finally {
+            if (connection != null) {
+                connection.disconnect();
+            }
         }
     }
 
-    private void notifyUpdate() {
-        String message = ColorParser.colorize("&#4ef89b[&lʟɪʀʙʀᴏᴀᴅᴄᴀꜱᴛ&#4ef89b] &f→&r &fUpdate available: &#4EF89Bv" + newVersion + " &7(current: v" + currentVersion + ")");
+    private void notifyConsoleAndOnline() {
+        if (!updateAvailable.get()) {
+            return;
+        }
+        String message = formatMessage();
         Logger.msg(message);
-
         for (Player player : Bukkit.getOnlinePlayers()) {
             if (player.isOp() || player.hasPermission("lirbroadcast.alert")) {
                 player.sendMessage(message);
@@ -88,15 +112,44 @@ public class UpdateChecker implements Listener {
     }
 
     @EventHandler
-    public void onPlayerJoin(PlayerJoinEvent event) {
-        if (!checkUpdates || newVersion.isEmpty()) {
+    public void onJoin(PlayerJoinEvent event) {
+        if (!enabled || !updateAvailable.get()) {
+            return;
+        }
+        Player player = event.getPlayer();
+        if (!player.isOp() && !player.hasPermission("lirbroadcast.alert")) {
             return;
         }
 
-        Player player = event.getPlayer();
-        if (player.isOp() || player.hasPermission("lirbroadcast.alert")) {
-            String message = ColorParser.colorize("&#4ef89b[&lʟɪʀʙʀᴏᴀᴅᴄᴀꜱᴛ&#4ef89b] &f→&r &fUpdate available: &#4EF89Bv" + newVersion + " &7(current: v" + currentVersion + ")");
-            Bukkit.getScheduler().runTaskLater(plugin, () -> player.sendMessage(message), 20L);
+        SchedulerUtil.runTaskLaterForPlayer(plugin, player,
+                () -> player.sendMessage(formatMessage()), 40L);
+    }
+
+    private String formatMessage() {
+        return ColorParser.colorize(
+                "&#4ef89b[&lʟɪʀʙʀᴏᴀᴅᴄᴀꜱᴛ&#4ef89b] &f→&r &fUpdate available: &#4EF89Bv"
+                + latestVersion + " &7(current: v" + currentVersion + ")"
+        );
+    }
+
+    private boolean isNewerVersion(String current, String latest) {
+        try {
+            String[] cur = current.split("\\.");
+            String[] lat = latest.split("\\.");
+            int len = Math.max(cur.length, lat.length);
+            for (int i = 0; i < len; i++) {
+                int c = i < cur.length ? Integer.parseInt(cur[i]) : 0;
+                int l = i < lat.length ? Integer.parseInt(lat[i]) : 0;
+                if (l > c) {
+                    return true;
+                }
+                if (l < c) {
+                    return false;
+                }
+            }
+        } catch (Exception ignored) {
+            return !latest.equalsIgnoreCase(current);
         }
+        return false;
     }
 }
